export class Endereco {
  nome!: string;
  CEP!: string;
  logradouro!: string;
  numeroLote!: string;
  complemento!: string;
  localidade!: string;
  UF!: string;
}
